--- a/JanaraHack4 - HR Analytics/Data Exploration.ipynb
+++ b/JanaraHack4 - HR Analytics/Data Exploration.ipynb
@@ -18,6 +18,35 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2.1.0'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.__version__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -7549,51 +7578,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(12851, 28)"
-      ]
-     },
-     "execution_count": 218,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "X_train.shape"
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Dense, Activation\n",
+    "from tensorflow.keras.optimizers import Adam\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model: \"sequential\"\n",
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "dense (Dense)                (None, 28)                812       \n",
-      "_________________________________________________________________\n",
-      "dense_1 (Dense)              (None, 28)                812       \n",
-      "_________________________________________________________________\n",
-      "dense_2 (Dense)              (None, 28)                812       \n",
-      "_________________________________________________________________\n",
-      "dense_3 (Dense)              (None, 28)                812       \n",
-      "_________________________________________________________________\n",
-      "dense_4 (Dense)              (None, 1)                 29        \n",
-      "=================================================================\n",
-      "Total params: 3,277\n",
-      "Trainable params: 3,277\n",
-      "Non-trainable params: 0\n",
-      "_________________________________________________________________\n"
+     "ename": "NameError",
+     "evalue": "name 'X_train' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-4-90e2ac826433>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;31m# The Input Layer :\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m \u001b[0mNN_model\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0madd\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mDense\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m28\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mactivation\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'relu'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0minput_dim\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mX_train\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      9\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;31m# The Hidden Layers :\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'X_train' is not defined"
      ]
     }
    ],
@@ -7641,6 +7648,158 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 227,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Learning rate set to 0.330003\n",
+      "0:\tlearn: 0.5331375\ttotal: 121ms\tremaining: 12s\n",
+      "1:\tlearn: 0.4295552\ttotal: 156ms\tremaining: 7.63s\n",
+      "2:\tlearn: 0.3799814\ttotal: 201ms\tremaining: 6.51s\n",
+      "3:\tlearn: 0.3451137\ttotal: 233ms\tremaining: 5.6s\n",
+      "4:\tlearn: 0.3280820\ttotal: 258ms\tremaining: 4.89s\n",
+      "5:\tlearn: 0.3162277\ttotal: 281ms\tremaining: 4.4s\n",
+      "6:\tlearn: 0.3099792\ttotal: 300ms\tremaining: 3.99s\n",
+      "7:\tlearn: 0.2988519\ttotal: 321ms\tremaining: 3.69s\n",
+      "8:\tlearn: 0.2912276\ttotal: 345ms\tremaining: 3.48s\n",
+      "9:\tlearn: 0.2855243\ttotal: 369ms\tremaining: 3.32s\n",
+      "10:\tlearn: 0.2833390\ttotal: 404ms\tremaining: 3.27s\n",
+      "11:\tlearn: 0.2820943\ttotal: 424ms\tremaining: 3.11s\n",
+      "12:\tlearn: 0.2812036\ttotal: 444ms\tremaining: 2.97s\n",
+      "13:\tlearn: 0.2789754\ttotal: 466ms\tremaining: 2.86s\n",
+      "14:\tlearn: 0.2751804\ttotal: 485ms\tremaining: 2.75s\n",
+      "15:\tlearn: 0.2729970\ttotal: 508ms\tremaining: 2.67s\n",
+      "16:\tlearn: 0.2716125\ttotal: 528ms\tremaining: 2.58s\n",
+      "17:\tlearn: 0.2694239\ttotal: 558ms\tremaining: 2.54s\n",
+      "18:\tlearn: 0.2685799\ttotal: 581ms\tremaining: 2.47s\n",
+      "19:\tlearn: 0.2677878\ttotal: 604ms\tremaining: 2.42s\n",
+      "20:\tlearn: 0.2669196\ttotal: 647ms\tremaining: 2.43s\n",
+      "21:\tlearn: 0.2650708\ttotal: 674ms\tremaining: 2.39s\n",
+      "22:\tlearn: 0.2635437\ttotal: 694ms\tremaining: 2.33s\n",
+      "23:\tlearn: 0.2617357\ttotal: 714ms\tremaining: 2.26s\n",
+      "24:\tlearn: 0.2601175\ttotal: 763ms\tremaining: 2.29s\n",
+      "25:\tlearn: 0.2592681\ttotal: 790ms\tremaining: 2.25s\n",
+      "26:\tlearn: 0.2588373\ttotal: 846ms\tremaining: 2.29s\n",
+      "27:\tlearn: 0.2582644\ttotal: 865ms\tremaining: 2.23s\n",
+      "28:\tlearn: 0.2570362\ttotal: 895ms\tremaining: 2.19s\n",
+      "29:\tlearn: 0.2564446\ttotal: 925ms\tremaining: 2.16s\n",
+      "30:\tlearn: 0.2554474\ttotal: 953ms\tremaining: 2.12s\n",
+      "31:\tlearn: 0.2548143\ttotal: 977ms\tremaining: 2.08s\n",
+      "32:\tlearn: 0.2538139\ttotal: 1s\tremaining: 2.04s\n",
+      "33:\tlearn: 0.2532866\ttotal: 1.03s\tremaining: 2s\n",
+      "34:\tlearn: 0.2524571\ttotal: 1.06s\tremaining: 1.96s\n",
+      "35:\tlearn: 0.2511593\ttotal: 1.07s\tremaining: 1.91s\n",
+      "36:\tlearn: 0.2503538\ttotal: 1.11s\tremaining: 1.89s\n",
+      "37:\tlearn: 0.2499079\ttotal: 1.13s\tremaining: 1.85s\n",
+      "38:\tlearn: 0.2489531\ttotal: 1.15s\tremaining: 1.8s\n",
+      "39:\tlearn: 0.2468439\ttotal: 1.17s\tremaining: 1.76s\n",
+      "40:\tlearn: 0.2453479\ttotal: 1.22s\tremaining: 1.75s\n",
+      "41:\tlearn: 0.2446489\ttotal: 1.24s\tremaining: 1.71s\n",
+      "42:\tlearn: 0.2424752\ttotal: 1.29s\tremaining: 1.71s\n",
+      "43:\tlearn: 0.2413696\ttotal: 1.32s\tremaining: 1.68s\n",
+      "44:\tlearn: 0.2398560\ttotal: 1.34s\tremaining: 1.64s\n",
+      "45:\tlearn: 0.2376081\ttotal: 1.36s\tremaining: 1.59s\n",
+      "46:\tlearn: 0.2370523\ttotal: 1.38s\tremaining: 1.55s\n",
+      "47:\tlearn: 0.2363494\ttotal: 1.4s\tremaining: 1.51s\n",
+      "48:\tlearn: 0.2356588\ttotal: 1.42s\tremaining: 1.47s\n",
+      "49:\tlearn: 0.2352414\ttotal: 1.43s\tremaining: 1.43s\n",
+      "50:\tlearn: 0.2344667\ttotal: 1.47s\tremaining: 1.41s\n",
+      "51:\tlearn: 0.2336531\ttotal: 1.51s\tremaining: 1.39s\n",
+      "52:\tlearn: 0.2330309\ttotal: 1.53s\tremaining: 1.36s\n",
+      "53:\tlearn: 0.2323644\ttotal: 1.55s\tremaining: 1.32s\n",
+      "54:\tlearn: 0.2318867\ttotal: 1.57s\tremaining: 1.28s\n",
+      "55:\tlearn: 0.2309707\ttotal: 1.59s\tremaining: 1.25s\n",
+      "56:\tlearn: 0.2305285\ttotal: 1.61s\tremaining: 1.21s\n",
+      "57:\tlearn: 0.2295528\ttotal: 1.63s\tremaining: 1.18s\n",
+      "58:\tlearn: 0.2290677\ttotal: 1.65s\tremaining: 1.14s\n",
+      "59:\tlearn: 0.2278062\ttotal: 1.67s\tremaining: 1.11s\n",
+      "60:\tlearn: 0.2273196\ttotal: 1.69s\tremaining: 1.08s\n",
+      "61:\tlearn: 0.2265781\ttotal: 1.71s\tremaining: 1.05s\n",
+      "62:\tlearn: 0.2258960\ttotal: 1.73s\tremaining: 1.02s\n",
+      "63:\tlearn: 0.2254180\ttotal: 1.75s\tremaining: 987ms\n",
+      "64:\tlearn: 0.2249903\ttotal: 1.77s\tremaining: 955ms\n",
+      "65:\tlearn: 0.2246692\ttotal: 1.79s\tremaining: 924ms\n",
+      "66:\tlearn: 0.2238840\ttotal: 1.81s\tremaining: 894ms\n",
+      "67:\tlearn: 0.2234775\ttotal: 1.83s\tremaining: 862ms\n",
+      "68:\tlearn: 0.2229228\ttotal: 1.85s\tremaining: 832ms\n",
+      "69:\tlearn: 0.2221704\ttotal: 1.88s\tremaining: 804ms\n",
+      "70:\tlearn: 0.2218783\ttotal: 1.9s\tremaining: 776ms\n",
+      "71:\tlearn: 0.2212091\ttotal: 1.92s\tremaining: 747ms\n",
+      "72:\tlearn: 0.2203974\ttotal: 1.94s\tremaining: 717ms\n",
+      "73:\tlearn: 0.2197377\ttotal: 1.96s\tremaining: 688ms\n",
+      "74:\tlearn: 0.2190585\ttotal: 1.98s\tremaining: 659ms\n",
+      "75:\tlearn: 0.2184167\ttotal: 2s\tremaining: 631ms\n",
+      "76:\tlearn: 0.2177535\ttotal: 2.02s\tremaining: 603ms\n",
+      "77:\tlearn: 0.2172994\ttotal: 2.04s\tremaining: 575ms\n",
+      "78:\tlearn: 0.2166560\ttotal: 2.06s\tremaining: 548ms\n",
+      "79:\tlearn: 0.2160191\ttotal: 2.08s\tremaining: 520ms\n",
+      "80:\tlearn: 0.2154743\ttotal: 2.1s\tremaining: 493ms\n",
+      "81:\tlearn: 0.2148157\ttotal: 2.12s\tremaining: 466ms\n",
+      "82:\tlearn: 0.2142641\ttotal: 2.14s\tremaining: 439ms\n",
+      "83:\tlearn: 0.2139131\ttotal: 2.16s\tremaining: 412ms\n",
+      "84:\tlearn: 0.2135756\ttotal: 2.18s\tremaining: 385ms\n",
+      "85:\tlearn: 0.2126968\ttotal: 2.2s\tremaining: 359ms\n",
+      "86:\tlearn: 0.2122572\ttotal: 2.22s\tremaining: 332ms\n",
+      "87:\tlearn: 0.2117409\ttotal: 2.25s\tremaining: 306ms\n",
+      "88:\tlearn: 0.2112922\ttotal: 2.27s\tremaining: 281ms\n",
+      "89:\tlearn: 0.2109106\ttotal: 2.29s\tremaining: 255ms\n",
+      "90:\tlearn: 0.2105594\ttotal: 2.31s\tremaining: 229ms\n",
+      "91:\tlearn: 0.2101322\ttotal: 2.33s\tremaining: 203ms\n",
+      "92:\tlearn: 0.2094702\ttotal: 2.35s\tremaining: 177ms\n",
+      "93:\tlearn: 0.2089591\ttotal: 2.37s\tremaining: 151ms\n",
+      "94:\tlearn: 0.2083346\ttotal: 2.39s\tremaining: 126ms\n",
+      "95:\tlearn: 0.2078060\ttotal: 2.41s\tremaining: 100ms\n",
+      "96:\tlearn: 0.2074193\ttotal: 2.43s\tremaining: 75.3ms\n",
+      "97:\tlearn: 0.2069263\ttotal: 2.46s\tremaining: 50.1ms\n",
+      "98:\tlearn: 0.2062745\ttotal: 2.48s\tremaining: 25ms\n",
+      "99:\tlearn: 0.2058061\ttotal: 2.5s\tremaining: 0us\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([0.50690192, 0.01879961, 0.1685222 , ..., 0.1021183 , 0.19914102,\n",
+       "       0.99930516])"
+      ]
+     },
+     "execution_count": 227,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from catboost import CatBoostClassifier\n",
+    "\n",
+    "model = CatBoostClassifier(n_estimators=100)\n",
+    "model.fit(X_train,y_train,verbose=True)\n",
+    "\n",
+    "predict_test = model.predict_proba(X_test)[:,1]\n",
+    "\n",
+    "print(roc_auc_score(y_test,predict_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 228,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9380594701080278\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(roc_auc_score(y_test,predict_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -7663,7 +7822,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
